# img2sample

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: release.yml
plugin/Resources/: bridge.js  index.html
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/Source/Network/: LyriaClient.cpp  LyriaClient.h  WebBridge.cpp  WebBridge.h
plugin/Source/UI/: NativeDragView.h  NativeDragView.mm
scripts/: build_plugin.sh  package.sh
web/: index.html
